--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
           <a href="#product" style="text-decoration: none">homemade</a>
         </li>
         <li><a href="#sneakers" style="text-decoration: none">sneakers</a></li>
-        <li><a href="products.php" style="text-decoration: none">shop</a></li>
+        <li><a href="products." style="text-decoration: none">shop</a></li>
       </ul>
 
       <div class="nav-icon">
-        <a href="login.php"><i class="bx bx-user"></i></a>
+        <a href="login.html"><i class="bx bx-user"></i></a>
         <div class="bx bx-menu" id="menu-icon"></div>
       </div>
     </header>
@@ -57,7 +57,7 @@
         <h5>Darpvinci Collection</h5>
         <h1>New Homemade <br />Collection</h1>
         <p>Quality, Comfort, Affordable, Prices, Only Here!</p>
-        <a href="products.php" class="main-btn"
+        <a href="products.html" class="main-btn"
           >Shop Now <i class="bx bx-right-arrow-alt"></i
         ></a>
       </div>
@@ -87,7 +87,7 @@
           <div class="price">
             <h4>Semi Formal Set</h4>
             <p>$10 - $25</p>
-            <a href="products.php"
+            <a href="products.html"
               ><button type="button" class="btn btn-dark">
                 See more set
               </button></a
@@ -110,7 +110,7 @@
           <div class="price">
             <h4>Casual Set</h4>
             <p>$10 - $15</p>
-            <a href="products.php"
+            <a href="products.html"
               ><button type="button" class="btn btn-dark">
                 See more set
               </button></a
@@ -133,7 +133,7 @@
           <div class="price">
             <h4>Vintage Set</h4>
             <p>$15 - $20</p>
-            <a href="products.php"
+            <a href="products.html"
               ><button type="button" class="btn btn-dark">
                 See more set
               </button></a
@@ -156,7 +156,7 @@
           <div class="price">
             <h4>Oversize Set</h4>
             <p>$12 - $15</p>
-            <a href="products.php"
+            <a href="products.html"
               ><button type="button" class="btn btn-dark">
                 See more set
               </button></a
@@ -176,7 +176,7 @@
           <div class="price">
             <h4>Semi Casual Set</h4>
             <p>$8 - $15</p>
-            <a href="products.php"
+            <a href="products.html"
               ><button type="button" class="btn btn-dark">
                 See more set
               </button></a
@@ -196,7 +196,7 @@
           <div class="price">
             <h4>Riding Set</h4>
             <p>$20 - $25</p>
-            <a href="products.php"
+            <a href="products.html"
               ><button type="button" class="btn btn-dark">
                 See more set
               </button></a
@@ -226,7 +226,7 @@
                   <span>42</span>
                   <span>43</span>
                 </div>
-                <a href="products.php">Order</a>
+                <a href="products.html">Order</a>
               </div>
             </div>
           </div>
@@ -246,7 +246,7 @@
                   <span>37</span>
                   <span>40</span>
                 </div>
-                <a href="products.php">Order</a>
+                <a href="products.html">Order</a>
               </div>
             </div>
           </div>
@@ -266,7 +266,7 @@
                   <span>37</span>
                   <span>38</span>
                 </div>
-                <a href="products.php">Order</a>
+                <a href="products.html">Order</a>
               </div>
             </div>
           </div>
@@ -291,7 +291,7 @@
                   <span>39</span>
                   <span>42</span>
                 </div>
-                <a href="products.php">Order</a>
+                <a href="products.html">Order</a>
               </div>
             </div>
           </div>
@@ -311,7 +311,7 @@
                   <span>40</span>
                   <span>43</span>
                 </div>
-                <a href="products.php">Order</a>
+                <a href="products.html">Order</a>
               </div>
             </div>
           </div>
@@ -331,7 +331,7 @@
                   <span>45</span>
                   <span>46</span>
                 </div>
-                <a href="products.php">Order</a>
+                <a href="products.html">Order</a>
               </div>
             </div>
           </div>
@@ -356,7 +356,7 @@
                   <span>39</span>
                   <span>40</span>
                 </div>
-                <a href="products.php">Order</a>
+                <a href="products.html">Order</a>
               </div>
             </div>
           </div>
@@ -376,7 +376,7 @@
                   <span>44</span>
                   <span>46</span>
                 </div>
-                <a href="products.php">Order</a>
+                <a href="products.html">Order</a>
               </div>
             </div>
           </div>
@@ -396,7 +396,7 @@
                   <span>45</span>
                   <span>47</span>
                 </div>
-                <a href="products.php">Order</a>
+                <a href="products.html">Order</a>
               </div>
             </div>
           </div>
@@ -662,7 +662,7 @@
           <h4>Darpvinci</h4>
           <a href="PDF/SIZE GUIDE.pdf"><p>Size Guide</p></a>
           <a href="#blog"><p>Blog</p></a>
-          <a href="login.php"><p>Login</p></a>
+          <a href="login.html"><p>Login</p></a>
         </div>
         <div class="third-info">
           <h4>Shop</h4>
@@ -673,7 +673,7 @@
         </div>
         <div class="fourth-info">
           <h4>CEO</h4>
-          <a href="ceo.php"><p>About CEO</p></a>
+          <a href="ceo.html"><p>About CEO</p></a>
         </div>
       </div>
     </section>
