--- a/header.html
+++ b/header.html
@@ -1,7 +1,3 @@
-<?php
-
-@include 'config.php'; ?>
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,18 +19,18 @@
   </head>
   <body>
     <header class="header">
-      <a href="index.php" class="logo"
+      <a href="index.html" class="logo"
         ><img
           src="DATABASEFOTO/LOGO/IMG_20231204_093553-removebg-preview.png"
           alt=""
       /></a>
       <ul class="navmenu">
-        <li><a href="index.php" style="text-decoration: none">home</a></li>
+        <li><a href="index.html" style="text-decoration: none">home</a></li>
         <li>
-          <a href="index.php" style="text-decoration: none">homemade</a>
+          <a href="index.html" style="text-decoration: none">homemade</a>
         </li>
-        <li><a href="index.php" style="text-decoration: none">sneakers</a></li>
-        <li><a href="products.php" style="text-decoration: none">shop</a></li>
+        <li><a href="index.html" style="text-decoration: none">sneakers</a></li>
+        <li><a href="products.html" style="text-decoration: none">shop</a></li>
       </ul>
 
       <div class="nav-icon">
@@ -46,11 +42,11 @@
 
       ?>
 
-          <a href="cart.php" class="cart"
+          <a href="cart.html" class="cart"
             >cart <span><?php echo $row_count; ?></span>
           </a>
         </div>
-        <a href="logout.php"><i class="bx bx-user">logout</i></a>
+        <a href="logout.html"><i class="bx bx-user">logout</i></a>
         <div class="bx bx-menu" id="menu-icon"></div>
       </div>
     </header>
