--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
       <input type="email" name="email" class="box" placeholder="enter your email" required>
       <input type="password" name="pass" class="box" placeholder="enter your password" required>
       <input type="submit" value="login now" class="btn" name="submit">
-      <p>don't have an account? <a href="register.php">register now</a></p>
+      <p>don't have an account? <a href="register.html">register now</a></p>
    </form>
 </section>
 </body>
