--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
       <input type="password" name="cpass" class="box" placeholder="confirm your password" required>
       <input type="file" name="image" class="box" required accept="image/jpg, image/jpeg, image/png">
       <input type="submit" value="register now" class="btn" name="submit">
-      <p>already have an account? <a href="login.php">login now</a></p>
+      <p>already have an account? <a href="login.html">login now</a></p>
    </form>
 
 </section>
