--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a href="#product" style="text-decoration: none">homemade</a>
         </li>
         <li><a href="#sneakers" style="text-decoration: none">sneakers</a></li>
-        <li><a href="products." style="text-decoration: none">shop</a></li>
+        <li><a href="products.html" style="text-decoration: none">shop</a></li>
       </ul>
 
       <div class="nav-icon">
