--- a/products.html
+++ b/products.html
@@ -24,14 +24,14 @@
 
       <form action="" method="post">
          <div class="box">
-            <img src="uploaded_img/<?php echo $fetch_product['image']; ?>" alt="">
-            <h3><?php echo $fetch_product['name']; ?></h3>
-            <div class="price">$<?php echo $fetch_product['price']; ?>/-</div>
-            <input type="hidden" name="product_id" value="<?php echo $fetch_product['id']; ?>">
-            <input type="hidden" name="product_name" value="<?php echo $fetch_product['name']; ?>">
-            <input type="hidden" name="product_price" value="<?php echo $fetch_product['price']; ?>">
-            <input type="hidden" name="product_image" value="<?php echo $fetch_product['image']; ?>">
-            <input type="submit" class="btn" value="add to cart" name="add_to_cart">
+            <img src="uploaded_img/" alt="">
+            <h3>Sepatu 1</h3>
+            <div class="price"></div>
+            <input type="hidden" name="product_id" value="">
+            <input type="hidden" name="product_name" value="">
+            <input type="hidden" name="product_price" value="">
+            <input type="hidden" name="product_image" value="">
+            <input type="submit" class="btn" value="">
          </div>
       </form>
    </div>
