--- a/ceo.html
+++ b/ceo.html
@@ -31,7 +31,7 @@
         <input type="checkbox" name="check" id="check" />
         <ul>
           <li><a href="#home">Home</a></li>
-          <li><a href="index.html">Darpvinci</a></li>
+          <li><a href="index.html">rpvinci</a></li>
           <li><a href="#about">About me</a></li>
           <li><a href="#portofolio">Portfolio</a></li>
           <li><a href="#contact">Contact</a></li>
